# cs2-rental-manager

./: .gitignore  CS2租赁管理.spec  GITHUB_SETUP.md  MAINTENANCE.md  PLAN_OPTIMIZATION.md  README.md  RENTAL_SELECTION_METHODOLOGY.md  build_exe.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_debug.py  test_apis.py  test_asset_import.py  test_cloud_sync.py  test_csfloat_client.py  test_dashboard_calculations.py  test_data_integrity.py  test_eco_market_cache.py  test_exchange_rate_client.py  test_igxe_api.py  test_item_schema_search.py  test_market_table_model.py  test_navigation_shortcuts.py  test_rental_terms.py  test_startup_manager.py  test_worker_threading.py
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
docs/: PLAN_OPTIMIZATION.md  RENTAL_SELECTION_METHODOLOGY.md
modules/: asset_import.py  atomic_io.py  base_client.py  browser_bridge.py  c5_rental_browser.py  cloud_sync.py  cs2_item_schema.py  csfloat_buy_analysis.py  csfloat_client.py  csqaq_client.py  dashboard_service.py  db_manager.py  db_migrations.py  domain_models.py  eco_client.py  eco_market_cache.py  exchange_rate_client.py  igxe_client.py  image_cache.py  logger.py  market_table_model.py  market_watch_service.py  paths.py  platform_time.py  rental_matching.py  rental_order_parsers.py  rental_terms.py  retry.py  secret_store.py  startup_manager.py  ui_theme.py  version.py  workers.py
tests/: __init__.py  test_config_recovery.py  test_csfloat_client.py  test_dashboard_calculations.py  test_data_integrity.py  test_eco_market_cache.py  (+5 more)
(+2 files in other folders)
