[project]
name = "cs2-rental-manager"
version = "3.1.0"
requires-python = ">=3.13"
dependencies = [
    "PySide6==6.11.1",
    "requests==2.32.3",
    "pycryptodome==3.23.0",
]

[tool.ruff]
target-version = "py313"
line-length = 110
extend-exclude = ["build", "release", "release-update", "private-data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["modules"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
